# Kenshi-Online

./: .gitattributes  .gitignore  ARCHITECTURE_REDESIGN.md  BUILDING.md  BUILD_INSTRUCTIONS.md  Build_All.bat  Build_KenshiOnline.bat  Build_Plugin.bat  Build_With_VisualStudio.bat  CHANGELOG.md  CMakeLists.txt  CODEBASE_OVERVIEW.md  COMPILATION_FIXES.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  EASY_START.md  EASY_START_RU.md  FAQ.md  FEATURES.md  Host_KenshiOnline.bat  Host_Server.bat  IMPLEMENTATION_STATUS.md  Join_Friend.bat  Join_KenshiOnline.bat  KENSHI_ONLINE_V2.md  KENSHI_ONLINE_V2_RU.md  KSERVERMOD_INTEGRATION.md  Kenshi-Online.sln  KenshiOnline.sln  Launcher.bat  MULTIPLAYER_SETUP.md  PLAY.bat  PROJECT_SUMMARY.md  Play_Localhost.bat  QUICKTEST.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_GAME_SERVER.md  QUICK_START_V2.md  QUICK_START_V2_RU.md  (+23 more)
.claude/: settings.local.json
.github/: dependabot.yml
Kenshi-Online/: ActionProcessor.cs  AntiCheatSystem.cs  AuthManager.cs  Client.cs  ClientProgram.cs  CombatAction.cs  DedicatedServer.cs  EncryptionHelper.cs  EnhancedProgram.cs  FriendsManager.cs  GameFileManager.cs  GameMessage.cs  GameModManager.cs  HealthStatus.cs  HostCoop.cs  InventoryItem.cs  KenshiMultiplayer.csproj  Lobby.cs  Logger.cs  MI.cs  MarketplaceManager.cs  MessageType.cs  ModCompatability.cs  OGREPlugin.cs  PathCache.cs  PathInjector.cs  PlayerData.cs  PlayerState.cs  Position.cs  Program.cs  Program.cs.backup  QuickTest.cs  STUNClient.cs  Server.cs  ServerProgram.cs  TradeManager.cs  UserManager.cs  WebSocketManager.cs  WebUIController.cs  fix-compilation.sh  (+1 more)
KenshiMP.Core/: CMakeLists.txt  core.cpp  core.h
KenshiMP.Core/engine/: engine.h  engine_bootstrap.h  engine_context.h  engine_events.h  engine_pipeline.h  engine_system.h
KenshiMP.Core/game/: game_character.cpp  game_inventory.cpp  game_inventory.h  game_squad.cpp  game_types.h  game_world.cpp  loading_orchestrator.cpp  loading_orchestrator.h  player_controller.cpp  player_controller.h  spawn_manager.cpp  spawn_manager.h
KenshiMP.Core/hooks/: combat_hooks.cpp  combat_hooks.h  entity_hooks.cpp  entity_hooks.h  faction_hooks.cpp  game_tick_hooks.cpp  input_hooks.cpp  inventory_hooks.cpp  movement_hooks.cpp  render_hooks.cpp  render_hooks.h  save_hooks.cpp  save_hooks.h  squad_hooks.cpp  time_hooks.cpp  time_hooks.h  world_hooks.cpp  world_hooks.h
KenshiMP.Core/net/: client.cpp  client.h  packet_handler.cpp
KenshiMP.Core/sync/: entity_registry.cpp  entity_registry.h  entity_resolver.cpp  interpolation.cpp  interpolation.h  ownership.cpp  pipeline_orchestrator.cpp  pipeline_orchestrator.h  sync_facilitator.cpp  sync_orchestrator.cpp  sync_orchestrator.h  zone_engine.cpp  zone_interest.cpp
KenshiMP.Core/sys/: builtin_commands.cpp  task_orchestrator.cpp
KenshiMP.Core/ui/: chat.cpp  connection_ui.cpp  native_hud.cpp  native_menu.cpp  overlay.cpp  overlay.h  player_list.cpp
KenshiMP.Injector/: injector.cpp  injector.h  main.cpp  process.cpp  process.h
KenshiMP.IntegrationTest/: main.cpp
KenshiMP.MasterServer/: CMakeLists.txt
KenshiMP.Scanner/: CMakeLists.txt
KenshiMP.Scanner/include/kmp/: hook_manager.h  mov_rax_rsp_fix.h  orchestrator.h  patterns.h  safe_hook.h
KenshiMP.Scanner/src/: hook_manager.cpp  mov_rax_rsp_fix.cpp  orchestrator.cpp  patterns.cpp  vtable_scanner.cpp
KenshiMP.Server/: CMakeLists.txt  entity_manager.cpp  game_state.cpp  main.cpp  player_manager.cpp  server.cpp  server.h  upnp.cpp  world_persistence.cpp  zone_manager.cpp
KenshiMP.TestClient/: main.cpp
KenshiMP.UnitTest/: main.cpp
KenshiOnline.ClientService/: KenshiOnline.ClientService.csproj  KenshiOnlineClientService.cs  Program.cs
KenshiOnline.Core/: KenshiOnline.Core.csproj
KenshiOnline.IPC/: IMessageHandler.cs  (+4 more)
KenshiOnlineMod/: .gitignore  AIController.cpp  AIController.h  AnimationController.cpp  AnimationController.h  CMakeLists.txt  DirectX11Hook.cpp  DirectX11Hook.h  ImGuiUI.cpp  ImGuiUI.h  KenshiOnlineMod.cpp  KenshiOnlineMod.sln  KenshiOnlineMod.vcxproj  KenshiOnlineMod.vcxproj.filters  NetworkController.cpp  NetworkController.h  OgreController.cpp  OgreController.h  PlayerController.cpp  PlayerController.h  README.md  ServerAPI.cpp  ServerAPI.h  setup_dependencies.bat  setup_dependencies.ps1
KenshiOnlineMod/Hooks/: D3D11Hook.cpp  D3D11Hook.h  InputHook.cpp  InputHook.h
KenshiOnlineMod/Memory/: KenshiGameBridge.cpp  KenshiGameBridge.h  KenshiMemoryStructures.h  OnlineOffsetFetcher.cpp  OnlineOffsetFetcher.h  PatternScanner.cpp  PatternScanner.h
KenshiOnlineMod/Overlay/: Overlay.cpp  Overlay.h  OverlayUI.cpp  OverlayUI.h
KenshiOnlineMod/imgui/: imgui.cpp  imgui.h
Re_Kenshi_Plugin/: CMakeLists.txt  Download_Dependencies.bat  MULTIPLAYER_INTEGRATION.md  README.md  REVERSE_ENGINEERING.md  re_kenshi_config.json
Re_Kenshi_Plugin/examples/: BasicUsageExample.cpp  CompleteIntegrationExample.cpp  ConfigurationExample.cpp  LoggerExample.cpp  PatternCoordinatorExample.cpp  PatternDatabaseExample.cpp  TestingExample.cpp  UtilitiesExample.cpp
Re_Kenshi_Plugin/include/: Configuration.h  D3D11Hook.h  EntityBridge.h  GameEventManager.h  GameStateManager.h  IPCClient.h  ImGuiRenderer.h  InputHandler.h  KServerModIntegration.h  KenshiAdvancedStructures.h  KenshiStructures.h  Logger.h  MemoryScanner.h  MessageProtocol.h  MultiplayerSyncManager.h  NetworkClient.h  NetworkProtocol.h  OgreOverlay.h  PatternCoordinator.h  PatternDatabase.h  PatternInterpreter.h  PatternResolver.h  PerformanceProfiler.h  Re_Kenshi_Plugin.h  TestingUtilities.h  UIRenderer.h  Utilities.h
Re_Kenshi_Plugin/src/: Configuration.cpp  D3D11Hook.cpp  GameEventManager.cpp  GameStateManager.cpp  IPCClient.cpp  ImGuiRenderer.cpp  InputHandler.cpp  KServerModIntegration.cpp  KenshiAdvancedStructures.cpp  KenshiOnlinePlugin.cpp  KenshiStructures.cpp  Logger.cpp  MemoryScanner.cpp  MessageProtocol.cpp  MultiplayerSyncManager.cpp  OgreOverlay.cpp  PatternCoordinator.cpp  PatternDatabase.cpp  PatternInterpreter.cpp  PatternResolver.cpp  PerformanceProfiler.cpp  TestingUtilities.cpp  UIRenderer.cpp  Utilities.cpp  dllmain.cpp
(+202 files in other folders)
